--- a/src/css/scss/sections/home/components/_slider.scss
+++ b/src/css/scss/sections/home/components/_slider.scss
@@ -55,5 +55,5 @@
 }
 
 .full-width::after {
-  width: calc(3 * 100vw / 3);
+  width: 100%;
 }
